Ingress/haproxy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-controller
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
  namespace: ingress-controller
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      run: haproxy-ingress
  template:
    metadata:
      labels:
        run: haproxy-ingress
    spec:
      nodeSelector:
        role: ingress-controller
      serviceAccountName: ingress-controller
      containers:
      - name: haproxy-ingress
        image: quay.io/jcmoraisjr/haproxy-ingress
        args:
        - --configmap=ingress-controller/haproxy-ingress
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        - name: stat
          containerPort: 1936
        - name: ingress-stats
          containerPort: 10254
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10253
      tolerations:
      - operator: Exists
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
  namespace: ingress-controller
spec:
  selector:
    run: haproxy-ingress
  type: NodePort
  ports:
  - name: http
    nodePort: 30080
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    nodePort: 30443
    port: 443
    protocol: TCP
    targetPort: 443
  - name: stat
    nodePort: 31936
    port: 1936
    protocol: TCP
    targetPort: 1936
  - name: ingress-stats
    nodePort: 30254
    port: 10254
    protocol: TCP
    targetPort: 10254
  sessionAffinity: ClientIP
